# adv_mla_lab_1

./: pyproject.toml  requirements.txt
adv_mla_lab_1/: Pipfile  pyproject.toml
adv_mla_lab_1/notebooks/: 1_baseline.ipynb  2_rf.ipynb
ls -la/: Makefile  README.md
ls -la/docs/: mkdocs.yml
ls -la/docs/docs/: index.md
