[project]
name = "adv-mla-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "pranavsat",email = "pranavsathya56@gmail.com"}
]
license = {text = "n"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (==2.2.2)",
    "jupyterlab (==4.4.4)",
    "scikit-learn (==1.5.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
